# Zapp-Builder

./: .env  .env.example  .gitignore  Dockerfile  PRD.txt  PROJECT_SUMMARY.md  README.md  SETUP.md  compose.debug.yaml  compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run_app.py  setup_fixed.py  start.py  test_app.py  test_backend.py
backend/agents/: __init__.py  lead_generation_agent.py
backend/core/: config.py  database.py
content-creator-studio/: .env.example  .gitignore  README.md  docker-compose.yml  start.sh
content-creator-studio/backend/: __init__.py  main.py
content-creator-studio/backend/agents/: content_creator_agent.py  crew_manager.py  outreach_agent.py  research_agent.py
content-creator-studio/backend/api/: __init__.py  routes.py
content-creator-studio/backend/core/: __init__.py  security.py
content-creator-studio/backend/services/: llm_service.py
content-creator-studio/database/: init.sql
content-creator-studio/frontend/: __init__.py  streamlit_app.py
content-creator-studio/frontend/components/: auth.py  input_panel.py  results_dashboard.py
content-creator-studio/frontend/utils/: __init__.py  session_manager.py
content-creator-studio/tools/: __init__.py  web_search.py
